# fishpond-Iot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ai  README.md  deploy-with-ssl.md  deploy.sh  docker-compose.yaml  nginx.conf  setup-ssl.sh  supervisord.conf
fishpond-ai/: GestureRecognition.py  README.md  api.py  pyproject.toml  run_server.py
fishpond-ai/api/: __init__.py  model.py  router.py
fishpond-backend/: .gitignore  config.py  pyproject.toml  refresh_data.py  run_server.py
fishpond-backend/api/: __init__.py  ext.py  model.py  router.py
fishpond-backend/api/available_device/: __init__.py  available_controller.py  available_monitor.py
fishpond-backend/core/: ext.py  model.py  parser.py  zdb.py  zxcloud.py
fishpond-backend/redis_mq/: __init__.py  redis_abs.py  redis_sqlite.py  redis_sqlite_sync.py
fishpond-frontend/: index.html  package-lock.json  package.json  vite.config.js
fishpond-frontend/public/: check-env.js
fishpond-frontend/src/: App.vue  api.js  main.js
fishpond-frontend/src/components/: ControlCard.vue  LineChart.vue  MonitorCard.vue  SideMenu.vue
fishpond-frontend/src/components/gauges/: TemperatureGauge.vue
fishpond-frontend/src/router/: index.js
fishpond-frontend/src/views/: AboutUs.vue  GestureRecognize.vue  HistoryData.vue  RealTimeControl.vue  RealTimeMonitor.vue
