[project]
name = "fishpond-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pysocks>=1.7.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
    "websockets>=15.0.1",
]
